package com.seis635.group.tictactoe.view;

import javax.swing.ImageIcon;

public class Marker {

	public static final ImageIcon X= new ImageIcon("x.png");
	public static final ImageIcon O= new ImageIcon("o.png");
}